# kaya-assignment

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: f9e88e3efe1b_add_tables.py
app/: database.py  main.py  models.py  schema.py  service.py
data/: ad_group_stats.csv  ad_groups.csv  campaigns.csv
tests/api/: conftest.py  test_campaign_api.py
tests/integration/: conftest.py  test_campaign_service.py
utils/: dump_csv_data.py
