[project]
name = "kaya-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
]
